// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardsCollectionInspectorControls matches snapshot 1`] = `
<InspectorControls>
  <CardStylesPanel
    allowIndividualStyleOverride={false}
    columns={2}
    contentLayout="text-under-media"
    cornerRadius={4}
    gutter={16}
    setter={[Function]}
    showAllowIndividualStyleOverride={true}
    showContentLayout={true}
    showCornerRadius={true}
    showGutter={true}
    style="masonry"
  />
  <PanelBody
    initialOpen={true}
    title="Content"
  >
    <ForwardRef(RangeControl)
      label="Number of cards"
      max={20}
      min={1}
      onChange={[Function]}
      value={1}
    />
    <ToggleControl
      checked={false}
      label="Allow individual card override"
      onChange={[Function]}
    />
    <ToggleControl
      checked={true}
      label="Show title"
      onChange={[Function]}
    />
    <ToggleControl
      checked={true}
      label="Show secondary text"
      onChange={[Function]}
    />
    <ToggleControl
      checked={true}
      label="Show image"
      onChange={[Function]}
    />
    <ToggleControl
      checked={true}
      label="Show supporting text"
      onChange={[Function]}
    />
    <ToggleControl
      checked={true}
      label="Show actions"
      onChange={[Function]}
    />
    <ToggleControl
      checked={true}
      label="Show secondary action button"
      onChange={[Function]}
    />
  </PanelBody>
  <div
    key="0"
  />
</InspectorControls>
`;

exports[`CardsCollectionInspectorControls matches snapshot when individual overrides attributes are enabled 1`] = `
<InspectorControls>
  <CardStylesPanel
    allowIndividualStyleOverride={true}
    columns={2}
    contentLayout="text-under-media"
    cornerRadius={4}
    gutter={16}
    setter={[Function]}
    showAllowIndividualStyleOverride={true}
    showContentLayout={true}
    showCornerRadius={true}
    showGutter={true}
    style="masonry"
  />
  <PanelBody
    initialOpen={true}
    title="Content"
  >
    <ForwardRef(RangeControl)
      label="Number of cards"
      max={20}
      min={1}
      onChange={[Function]}
      value={1}
    />
    <ToggleControl
      checked={true}
      label="Allow individual card override"
      onChange={[Function]}
    />
  </PanelBody>
  <div
    key="0"
  >
    <InspectorControlsStylePanel
      cardIndex={0}
      cardLayoutStyle="vertical"
      contentLayout="text-under-media"
      cornerRadius={4}
      isPanelInitialOpened={false}
      isSingleCard={false}
      setter={[MockFunction]}
    />
    <InspectorControlsStylePanel
      cardIndex={0}
      displayActions={true}
      displayImage={true}
      displaySecondaryActionButton={false}
      displaySecondaryText={true}
      displaySupportingText={true}
      displayTitle={true}
      isPanelInitialOpened={false}
      isSingleCard={false}
      setter={[MockFunction]}
    />
  </div>
</InspectorControls>
`;

exports[`CardsCollectionInspectorControls matches snapshot when the style attributes is \`list\` 1`] = `
<InspectorControls>
  <CardStylesPanel
    allowIndividualStyleOverride={false}
    columns={2}
    contentLayout="text-under-media"
    cornerRadius={4}
    gutter={16}
    setter={[Function]}
    showAllowIndividualStyleOverride={true}
    showContentLayout={false}
    showCornerRadius={true}
    showGutter={true}
    style="list"
  />
  <PanelBody
    initialOpen={true}
    title="Content"
  >
    <ForwardRef(RangeControl)
      label="Number of cards"
      max={20}
      min={1}
      onChange={[Function]}
      value={1}
    />
    <ToggleControl
      checked={false}
      label="Allow individual card override"
      onChange={[Function]}
    />
    <ToggleControl
      checked={true}
      label="Show title"
      onChange={[Function]}
    />
    <ToggleControl
      checked={true}
      label="Show secondary text"
      onChange={[Function]}
    />
    <ToggleControl
      checked={true}
      label="Show image"
      onChange={[Function]}
    />
    <ToggleControl
      checked={true}
      label="Show actions"
      onChange={[Function]}
    />
    <ToggleControl
      checked={true}
      label="Show secondary action button"
      onChange={[Function]}
    />
  </PanelBody>
  <div
    key="0"
  />
</InspectorControls>
`;
